--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@ th{background:var(--amarelo)}
 .total{font-size:22px;font-weight:bold;color:#c64f86;margin-top:15px}
 .badge{background:#ffe1ec;padding:6px 10px;border-radius:20px;font-size:13px}
 /* PDF */
-#contratoPDF{background:linear-gradient(135deg,#ffe6f0,#fff8dc,#e8f7ff);padding:40px;position:relative;visibility:hidden;position:absolute;left:-9999px;top:0}
+#contratoPDF{
+  background:linear-gradient(135deg,#ffe6f0,#fff8dc,#e8f7ff);
+  padding:40px;
+  position:relative;
+  min-height:1100px; /* força área visível A4 */
+  margin-top:40px;
+  border:4px dashed #f4b3cd;
+}
+.watermark{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);opacity:0.08;z-index:0}
+.watermark img{width:90%}
+.content{position:relative;z-index:1;font-size:13px;color:#444}
+
 .watermark{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);opacity:0.07;z-index:0}
 .watermark img{width:90%}
 .content{position:relative;z-index:1;font-size:13px}
@@ -126,6 +137,7 @@ th{background:var(--amarelo)}
 </section>
 
 <div id="contratoPDF">
+<!-- VISUALIZAÇÃO DO CONTRATO (SE ESTA ÁREA NÃO APARECER, O PDF NÃO FUNCIONA) -->
 <div class="watermark"><img src="logo.png"></div>
 <div class="content" id="contratoConteudo">
 <h2 style="text-align:center">CONTRATO DE LOCAÇÃO – PEGUE E MONTE</h2>
@@ -149,276 +161,124 @@ th{background:var(--amarelo)}
 </div>
 
 <script>
-let clientes=JSON.parse(localStorage.getItem('clientes'))||[];
-let catalogoItens=JSON.parse(localStorage.getItem('catalogo'))||[];
-let contratos=JSON.parse(localStorage.getItem('contratos'))||[];
-let clienteAtual={},itens=[],penal=[];
-let valorContrato=0,sinal=0,totalPenal=0;
+// ================= DADOS =================
+let clientes = JSON.parse(localStorage.getItem('clientes')) || [];
+let catalogoItens = JSON.parse(localStorage.getItem('catalogo')) || [];
+let contratos = JSON.parse(localStorage.getItem('contratos')) || [];
+let clienteAtual = {}, itens = [], penal = [];
+let valorContrato = 0, sinal = 0, totalPenal = 0;
 
+// ================= INIT =================
 function init(){
- listaClientes.innerHTML='<option value="">Clientes salvos</option>';
- clientes.forEach((c,i)=>listaClientes.innerHTML+=`<option value="${i}">${c.nome}</option>`);
- catalogo.innerHTML='<option value="">Selecionar item</option>';
- tCatalogo.innerHTML='<tr><th>Item</th><th>Valor (avaria/extravio)</th><th>Estoque</th></tr>';
- catalogoItens.forEach((c,i)=>{
-  catalogo.innerHTML+=`<option value="${i}">${c.item}</option>`;
-  tCatalogo.innerHTML+=`<tr><td>${c.item}</td><td>${c.valor}</td><td>${c.estoque}</td></tr>`;
- });
- recalcular();
+  listaClientes.innerHTML = '<option value="">Clientes salvos</option>';
+  clientes.forEach((c,i)=>listaClientes.innerHTML+=`<option value="${i}">${c.nome}</option>`);
+
+  catalogo.innerHTML='<option value="">Selecionar item</option>';
+  tCatalogo.innerHTML='<tr><th>Item</th><th>Valor</th><th>Estoque</th></tr>';
+  catalogoItens.forEach((c,i)=>{
+    catalogo.innerHTML+=`<option value="${i}">${c.item}</option>`;
+    tCatalogo.innerHTML+=`<tr><td>${c.item}</td><td>${c.valor}</td><td>${c.estoque}</td></tr>`;
+  });
+  recalcular();
 }
 init();
 
+// ================= CLIENTE =================
 function salvarCliente(){
- clienteAtual={nome:nome.value,cpf:cpf.value,telefone:telefone.value,email:email.value,end:endereco.value};
- clientes.push(clienteAtual);
- localStorage.setItem('clientes',JSON.stringify(clientes));
- init();
- alert('Cliente salvo');
+  clienteAtual={nome:nome.value,cpf:cpf.value,telefone:telefone.value,email:email.value,end:endereco.value};
+  clientes.push(clienteAtual);
+  localStorage.setItem('clientes',JSON.stringify(clientes));
+  init();
+  alert('Cliente salvo');
 }
 
 function carregarCliente(){
- let c=clientes[listaClientes.value];
- if(!c)return;
- nome.value=c.nome;cpf.value=c.cpf;telefone.value=c.telefone;email.value=c.email;endereco.value=c.end;
- clienteAtual=c;
+  let c=clientes[listaClientes.value];
+  if(!c) return;
+  Object.assign(clienteAtual,c);
+  nome.value=c.nome;cpf.value=c.cpf;telefone.value=c.telefone;email.value=c.email;endereco.value=c.end;
 }
 
+// ================= CATÁLOGO =================
 function addCatalogo(){
- catalogoItens.push({item:catItem.value,valor:Number(catValor.value),estoque:catEstoque.value});
- localStorage.setItem('catalogo',JSON.stringify(catalogoItens));
- init();
- catItem.value=catValor.value=catEstoque.value='';
+  catalogoItens.push({item:catItem.value,valor:Number(catValor.value),estoque:catEstoque.value});
+  localStorage.setItem('catalogo',JSON.stringify(catalogoItens));
+  init();
+  catItem.value=catValor.value=catEstoque.value='';
 }
 
 function preencheCatalogo(){
- let c=catalogoItens[catalogo.value];
- if(c){item.value=c.item;valor.value=c.valor;}
+  let c=catalogoItens[catalogo.value];
+  if(c){item.value=c.item;valor.value=c.valor;}
 }
 
-// Itens NÃO somam no valor do contrato (apenas controle)
+// ================= ITENS =================
 function addItem(){
- itens.push({item:item.value,qtd:qtd.value,valor:valor.value});
- tItens.innerHTML+=`<tr><td>${item.value}</td><td>${qtd.value}</td><td>${valor.value}</td><td>-</td></tr>`;
- item.value=qtd.value=valor.value='';
+  itens.push({item:item.value,qtd:qtd.value,valor:valor.value});
+  tItens.innerHTML+=`<tr><td>${item.value}</td><td>${qtd.value}</td><td>${valor.value}</td><td>-</td></tr>`;
+  item.value=qtd.value=valor.value='';
 }
 
-// Penalidades SOMAM no valor final
 function addPenal(){
- let v=Number(valorPenal.value)||0;
- totalPenal+=v;
- penal.push({tipo:tipo.value,desc:desc.value,valor:v});
- tPenal.innerHTML+=`<tr><td>${tipo.value}</td><td>${desc.value}</td><td>${v.toFixed(2)}</td></tr>`;
- desc.value=valorPenal.value='';
- recalcular();
+  let v=Number(valorPenal.value)||0;
+  totalPenal+=v;
+  penal.push({tipo:tipo.value,desc:desc.value,valor:v});
+  tPenal.innerHTML+=`<tr><td>${tipo.value}</td><td>${desc.value}</td><td>${v.toFixed(2)}</td></tr>`;
+  desc.value=valorPenal.value='';
+  recalcular();
 }
 
+// ================= VALORES =================
 function recalcular(){
- valorContrato=Number(document.getElementById('valorContrato').value)||0;
- sinal=Number(document.getElementById('sinal').value)||0;
- let receber=(valorContrato - sinal) + totalPenal;
- document.getElementById('total').innerText=`Valor a Receber: R$ ${receber.toFixed(2)}`;
- return receber;
+  valorContrato=Number(valorContratoInput.value)||0;
+  sinal=Number(sinalInput.value)||0;
+  let receber=(valorContrato - sinal) + totalPenal;
+  total.innerText=`Valor a Receber: R$ ${receber.toFixed(2)}`;
+  return receber;
 }
 
+// ================= PREVIEW =================
 function previewContrato(){
- let receber=recalcular();
- document.getElementById('previewContrato').innerHTML=`
- <h3>CONTRATO DE LOCAÇÃO – PEGUE E MONTE</h3>
- <p><strong>Empresa:</strong> ${eNome.value} – ${eCidade.value}</p>
- <p><strong>Cliente:</strong> ${clienteAtual.nome} – ${clienteAtual.cpf}</p>
- <p><strong>Evento:</strong> ${dataEvento.value} – ${localEvento.value}</p>
- <h4>Itens Locados</h4>
- ${itens.map(i=>`${i.item} (${i.qtd})`).join('<br>')}
- <h4>Penalidades</h4>
- ${penal.map(p=>`${p.tipo}: ${p.desc} – R$ ${p.valor.toFixed(2)}`).join('<br>')||'Nenhuma'}
- <p><strong>Valor do Contrato:</strong> R$ ${valorContrato.toFixed(2)}</p>
- <p><strong>Sinal:</strong> R$ ${sinal.toFixed(2)}</p>
- <h3>VALOR A RECEBER: R$ ${receber.toFixed(2)}</h3>
- `;
- document.getElementById('previewBox').style.display='block';
+  let receber=recalcular();
+  previewContrato.innerHTML=`
+    <h3>CONTRATO DE LOCAÇÃO – PEGUE E MONTE</h3>
+    <p><strong>Empresa:</strong> ${eNome.value} – ${eCidade.value}</p>
+    <p><strong>Cliente:</strong> ${clienteAtual.nome} – ${clienteAtual.cpf}</p>
+    <p><strong>Evento:</strong> ${dataEvento.value} – ${localEvento.value}</p>
+    <p><strong>Valor a receber:</strong> R$ ${receber.toFixed(2)}</p>`;
+  previewBox.style.display='block';
 }
 
+// ================= PDF =================
 function gerarPDF(){
-  // garante que valores estejam atualizados
-  let receber = valorContrato - sinal + total;
+  let receber=recalcular();
 
-  // preenche dados do contrato visível
-  document.getElementById('numContrato').innerText = contratos.length + 1;
-  document.getElementById('cEmpresa').innerText = eNome.value;
-  document.getElementById('cCidade').innerText = eCidade.value;
-  document.getElementById('cCliente').innerText = `${clienteAtual.nome} - ${clienteAtual.cpf}`;
-  document.getElementById('cEndereco').innerText = clienteAtual.end;
-  document.getElementById('cData').innerText = dataEvento.value;
-  document.getElementById('cLocal').innerText = localEvento.value;
-  document.getElementById('cRet').innerText = horaRetirada.value;
-  document.getElementById('cDev').innerText = horaDevolucao.value;
-  document.getElementById('cItens').innerHTML = itens.map(i=>`${i.item} (${i.qtd}) - R$ ${i.valor}`).join('<br>');
-  document.getElementById('cPenal').innerHTML = penal.map(p=>`${p.tipo}: ${p.desc} - R$ ${p.valor}`).join('<br>');
-  document.getElementById('cTotal').innerText = receber.toFixed(2);
-  document.getElementById('cValorContrato').innerText = Number(valorContrato).toFixed(2);
-  document.getElementById('cSinal').innerText = Number(sinal).toFixed(2);
-  document.getElementById('cAss').innerText = assinatura.value;
+  cEmpresa.innerText=eNome.value;
+  cCidade.innerText=eCidade.value;
+  cCliente.innerText=`${clienteAtual.nome} - ${clienteAtual.cpf}`;
+  cEndereco.innerText=clienteAtual.end;
+  cData.innerText=dataEvento.value;
+  cLocal.innerText=localEvento.value;
+  cRet.innerText=horaRetirada.value;
+  cDev.innerText=horaDevolucao.value;
+  cItens.innerHTML=itens.map(i=>`${i.item} (${i.qtd})`).join('<br>')||'—';
+  cPenal.innerHTML=penal.map(p=>`${p.tipo}: ${p.desc} - R$ ${p.valor.toFixed(2)}`).join('<br>')||'Nenhuma';
+  cTotal.innerText=receber.toFixed(2);
+  cValorContrato.innerText=valorContrato.toFixed(2);
+  cSinal.innerText=sinal.toFixed(2);
+  cAss.innerText=assinatura.value;
 
-  html2pdf()
-    .set({
-      margin: 10,
-      filename: `Contrato_${clienteAtual.nome}.pdf`,
-      html2canvas: { scale: 2, useCORS: true },
-      jsPDF: { format: 'a4', orientation: 'portrait' }
-    })
-    .from(document.getElementById('contratoPDF'))
-    .save();
-}
- h1,h2{color:#c64f86;text-align:center}
- p{font-size:14px;line-height:1.5}
- </style></head><body>
- <h1>CONTRATO DE LOCAÇÃO – PEGUE E MONTE</h1>
- <p><strong>Empresa:</strong> ${eNome.value} – ${eCidade.value}</p>
- <p><strong>Cliente:</strong> ${clienteAtual.nome || ''}</p>
- <p><strong>Valor do contrato:</strong> R$ ${valorContrato.toFixed(2)}</p>
- <p><strong>Sinal:</strong> R$ ${sinal.toFixed(2)}</p>
- <h2>Valor a receber: R$ ${receber.toFixed(2)}</h2>
- <p>Assinatura: ${assinatura.value || ''}</p>
- </body></html>`;
-
- const blob = new Blob([html], { type: 'text/html' });
- const url = URL.createObjectURL(blob);
-
- const a = document.createElement('a');
- a.href = url;
- a.target = '_blank';
- a.click();
-
- setTimeout(()=>URL.revokeObjectURL(url),5000);
-
- contratos.push({num,cliente:clienteAtual,total:receber});
- localStorage.setItem('contratos',JSON.stringify(contratos));
-}
- w.document.open();
- w.document.write('<!DOCTYPE html><html><head><meta charset="UTF-8"><title>Contrato Teste</title>');
- w.document.write('<style>body{font-family:Arial;padding:40px}h1{color:#c64f86}</style>');
- w.document.write('</head><body>');
- w.document.write('<h1>CONTRATO DE TESTE</h1>');
- w.document.write('<p>Se você está vendo este texto, o navegador CONSEGUE gerar PDF corretamente.</p>');
- w.document.write('<p>Próximo passo: reintegrar dados dinâmicos com segurança.</p>');
- w.document.write('</body></html>');
- w.document.close();
- w.focus();
- setTimeout(()=>w.print(),300);
-}</title>
- <style>
- body{font-family:Segoe UI,Arial,sans-serif;padding:40px;
- background:linear-gradient(135deg,#ffe6f0,#fff8dc,#e8f7ff)}
- h2,h3{color:#c64f86;text-align:center}
- p{font-size:14px}
- .box{background:#fff;padding:25px;border-radius:16px}
- </style></head><body>
- <div class="box">
- <h2>CONTRATO DE LOCAÇÃO – PEGUE E MONTE</h2>
- <p><strong>Empresa:</strong> ${eNome.value} – ${eCidade.value}</p>
- <p><strong>Cliente:</strong> ${clienteAtual.nome} – ${clienteAtual.cpf}<br>${clienteAtual.end}</p>
- <p><strong>Evento:</strong> ${dataEvento.value} – ${localEvento.value}</p>
- <p><strong>Retirada:</strong> ${horaRetirada.value} | <strong>Devolução:</strong> ${horaDevolucao.value}</p>
- <h3>Itens Locados</h3>
- <p>${itens.map(i=>`${i.item} (${i.qtd})`).join('<br>') || '—'}</p>
- <h3>Avarias / Extravios</h3>
- <p>${penal.map(p=>`${p.tipo}: ${p.desc} – R$ ${p.valor.toFixed(2)}`).join('<br>') || 'Nenhuma'}</p>
- <h3>Valores</h3>
- <p>Valor do contrato: R$ ${valorContrato.toFixed(2)}<br>
- Sinal recebido: R$ ${sinal.toFixed(2)}</p>
- <h2>VALOR FINAL A RECEBER: R$ ${receber.toFixed(2)}</h2>
- <h3>Cláusulas Contratuais</h3>
- <p>1. O locatário declara receber os itens em perfeitas condições.</p>
- <p>2. Em caso de avaria ou extravio, será cobrado o valor integral do item.</p>
- <p>3. A devolução deverá ocorrer na data e horário combinados.</p>
- <p>4. Este contrato possui validade jurídica conforme MP 2.200-2/2001.</p>
- <p><strong>Assinatura digital:</strong> ${assinatura.value}</p>
- </div></body></html>`;
-
- const w = window.open('', '_blank');
- w.document.open();
- w.document.write(htmlContrato);
- w.document.close();
- w.focus();
- setTimeout(()=>w.print(),300);
-
- contratos.push({num,cliente:clienteAtual,total:receber});
- localStorage.setItem('contratos',JSON.stringify(contratos));
-} - ${clienteAtual.cpf}`;
- cEndereco.innerText=clienteAtual.end;
- cData.innerText=dataEvento.value;
- cLocal.innerText=localEvento.value;
- cRet.innerText=horaRetirada.value;
- cDev.innerText=horaDevolucao.value;
- cItens.innerHTML=itens.map(i=>`${i.item} (${i.qtd})`).join('<br>')||'—';
- cPenal.innerHTML=penal.map(p=>`${p.tipo}: ${p.desc} - R$ ${p.valor.toFixed(2)}`).join('<br>')||'Nenhuma';
- cTotal.innerText=receber.toFixed(2);
- cAss.innerText=assinatura.value;
- cValorContrato.innerText=valorContrato.toFixed(2);
- cSinal.innerText=sinal.toFixed(2);
- 
- contratos.push({num,cliente:clienteAtual,total:receber});
- localStorage.setItem('contratos',JSON.stringify(contratos));
- 
- // MÉTODO GARANTIDO: NOVA ABA + IMPRESSÃO
- const w = window.open('', '_blank');
- w.document.write(`<!DOCTYPE html><html><head><title>Contrato ${num}</title>
- <style>
- body{font-family:Segoe UI,sans-serif;padding:40px;background:linear-gradient(135deg,#ffe6f0,#fff8dc,#e8f7ff)}
- h2{color:#c64f86;text-align:center}
- </style></head><body>`);
- w.document.write(document.getElementById('contratoConteudo').innerHTML);
- w.document.write('</body></html>');
- w.document.close();
- w.focus();
- setTimeout(()=>w.print(),500);
-} - ${clienteAtual.cpf}`;
- cEndereco.innerText=clienteAtual.end;
- cData.innerText=dataEvento.value;
- cLocal.innerText=localEvento.value;
- cRet.innerText=horaRetirada.value;
- cDev.innerText=horaDevolucao.value;
- cItens.innerHTML=itens.map(i=>`${i.item} (${i.qtd})`).join('<br>')||'—';
- cPenal.innerHTML=penal.map(p=>`${p.tipo}: ${p.desc} - R$ ${p.valor.toFixed(2)}`).join('<br>')||'Nenhuma';
- cTotal.innerText=receber.toFixed(2);
- cAss.innerText=assinatura.value;
- cValorContrato.innerText=valorContrato.toFixed(2);
- cSinal.innerText=sinal.toFixed(2);
- contratos.push({num,cliente:clienteAtual,total:receber});
- localStorage.setItem('contratos',JSON.stringify(contratos));
-
- const contrato=document.getElementById('contratoPDF');
- contrato.style.visibility='visible';
-
- html2pdf().from(contrato).set({
-  filename:`Contrato_${num}_${clienteAtual.nome}.pdf`,
-  html2canvas:{scale:2,useCORS:true},
-  jsPDF:{format:'a4',orientation:'portrait'}
- }).save().then(()=>{
-  contrato.style.visibility='hidden';
- });
-} - ${clienteAtual.cpf}`;
- cEndereco.innerText=clienteAtual.end;
- cData.innerText=dataEvento.value;
- cLocal.innerText=localEvento.value;
- cRet.innerText=horaRetirada.value;
- cDev.innerText=horaDevolucao.value;
- cItens.innerHTML=itens.map(i=>`${i.item} (${i.qtd})`).join('<br>');
- cPenal.innerHTML=penal.map(p=>`${p.tipo}: ${p.desc} - R$ ${p.valor.toFixed(2)}`).join('<br>');
- cTotal.innerText=receber.toFixed(2);
- cAss.innerText=assinatura.value;
- cValorContrato.innerText=valorContrato.toFixed(2);
- cSinal.innerText=sinal.toFixed(2);
- contratos.push({num,cliente:clienteAtual,valorContrato,sinal,penal,total:receber});
- localStorage.setItem('contratos',JSON.stringify(contratos));
- contratoPDF.style.display='block';
- html2pdf().from(contratoPDF).set({filename:`Contrato_${num}_${clienteAtual.nome}.pdf`,html2canvas:{scale:2},jsPDF:{format:'a4'}}).save().then(()=>contratoPDF.style.display='none');
+  html2pdf().from(contratoPDF).set({
+    filename:`Contrato_${clienteAtual.nome}.pdf`,
+    html2canvas:{scale:2,useCORS:true},
+    jsPDF:{format:'a4',orientation:'portrait'}
+  }).save();
 }
 
 function enviarWhats(){
- let receber=recalcular();
- let msg=`Olá ${clienteAtual.nome}! Seu contrato Nº ${contratos.length} da Molleiros Decor foi gerado. Valor a receber: R$ ${receber.toFixed(2)}`;
- window.open(`https://wa.me/?text=${encodeURIComponent(msg)}`);
+  let receber=recalcular();
+  let msg=`Olá ${clienteAtual.nome}! Valor a receber: R$ ${receber.toFixed(2)}`;
+  window.open(`https://wa.me/?text=${encodeURIComponent(msg)}`);
 }
 
 function novoAtendimento(){location.reload();}
