--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@ th{background:var(--amarelo)}
 <!-- VISUALIZAÇÃO DO CONTRATO (SE ESTA ÁREA NÃO APARECER, O PDF NÃO FUNCIONA) -->
 <div class="watermark"><img src="logo.png"></div>
 <div class="content" id="contratoConteudo">
+<h1 style="text-align:center;color:#c64f86">📄 CONTRATO – VISUALIZAÇÃO NA TELA</h1>
+<p style="text-align:center;font-weight:bold">Se você está vendo este bloco, o contrato ESTÁ visível e o PDF irá funcionar.</p>
 <h2 style="text-align:center">CONTRATO DE LOCAÇÃO – PEGUE E MONTE</h2>
 <p><strong>LOCADORA:</strong> <span id="cEmpresa"></span> – <span id="cCidade"></span></p>
 <p><strong>LOCATÁRIO:</strong> <span id="cCliente"></span><br><span id="cEndereco"></span></p>
