--- a/index.html
+++ b/index.html
@@ -2,106 +2,43 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Molleiros Decor | Contrato Pegue e Monte</title>
+<title>Molleiros Decor | Sistema Profissional Estável</title>
 
+<!-- LIB ÚNICA E ESTÁVEL PARA PDF -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
 <style>
-body{
-  font-family:'Segoe UI',Arial;
-  background:#fdf6f9;
-  margin:0;
+:root{
+ --rosa:#f8c8dc;--rosa2:#f4b3cd;--amarelo:#fff1c1;--texto:#444;
 }
-
-header{
-  background:#f8c8dc;
-  padding:20px;
-  text-align:center;
-}
+body{font-family:'Segoe UI',Arial;background:#fff7fb;margin:0;color:var(--texto)}
+header{background:var(--rosa);padding:20px;text-align:center}
 header img{height:90px}
+section{background:#fff;max-width:1100px;margin:20px auto;padding:25px;border-radius:16px;box-shadow:0 0 14px rgba(0,0,0,.06)}
+h2{color:#c64f86;margin-top:0}
+label{display:block;margin-top:10px;font-size:14px}
+input{width:100%;padding:8px;border-radius:8px;border:1px solid #ddd}
+button{background:var(--rosa);border:none;padding:10px 18px;border-radius:10px;margin-top:15px;cursor:pointer}
+button:hover{background:var(--rosa2)}
+table{width:100%;border-collapse:collapse;margin-top:15px}
+th,td{border:1px solid #eee;padding:8px;text-align:center;font-size:14px}
+th{background:var(--amarelo)}
+.total{font-size:20px;font-weight:bold;color:#c64f86;margin-top:15px}
 
-section{
-  background:#fff;
-  max-width:1000px;
-  margin:25px auto;
-  padding:25px;
-  border-radius:14px;
-  box-shadow:0 0 12px rgba(0,0,0,.06);
-}
-
-h2{color:#c64f86}
-
-label{display:block;margin-top:10px}
-input{
-  width:100%;
-  padding:8px;
-  border-radius:8px;
-  border:1px solid #ddd;
-}
-
-button{
-  background:#f8c8dc;
-  border:none;
-  padding:10px 18px;
-  border-radius:8px;
-  margin-top:15px;
-  cursor:pointer;
-}
-
-table{
-  width:100%;
-  border-collapse:collapse;
-  margin-top:15px;
-}
-th,td{
-  border:1px solid #eee;
-  padding:8px;
-  text-align:center;
-}
-th{background:#fff1c1}
-
-/* CONTRATO */
-#contratoPDF{
-  margin-top:40px;
-  padding:50px;
-  min-height:1100px;
-  background:linear-gradient(135deg,#ffe6f0,#fff8dc,#e8f7ff);
-  position:relative;
-}
-
-.watermark{
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
-  opacity:0.08;
-}
+/* CONTRATO VISÍVEL */
+#contratoPDF{margin-top:40px;padding:50px;min-height:1100px;background:linear-gradient(135deg,#ffe6f0,#fff8dc,#e8f7ff);position:relative}
+.watermark{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);opacity:0.08}
 .watermark img{width:90%}
-
-.contratoConteudo{
-  position:relative;
-  z-index:1;
-  font-size:14px;
-  color:#444;
-}
-
-.valorDestaque{
-  font-size:20px;
-  font-weight:bold;
-  color:#c64f86;
-  margin:15px 0;
-}
+.contrato{position:relative;z-index:1;font-size:14px;line-height:1.6}
+.valorDestaque{font-size:22px;font-weight:bold;color:#c64f86;margin:15px 0}
 </style>
 </head>
 
 <body>
-
-<header>
-  <img src="logo.png">
-</header>
+<header><img src="logo.png"></header>
 
 <section>
-<h2>Cliente</h2>
+<h2>👩‍👧 Dados do Cliente</h2>
 <label>Nome</label><input id="cNome">
 <label>CPF</label><input id="cCpf">
 <label>Telefone</label><input id="cTel">
@@ -109,99 +46,99 @@ th{background:#fff1c1}
 </section>
 
 <section>
-<h2>Valores da Locação</h2>
-<label>Valor do Contrato (R$)</label><input id="valorContrato" type="number">
-<label>Sinal Pago (R$)</label><input id="sinal" type="number">
-<div id="valorReceber" class="valorDestaque"></div>
+<h2>💰 Valores da Locação</h2>
+<label>Valor do Contrato (R$)</label><input id="valorContrato" type="number" oninput="atualizar()">
+<label>Sinal Pago (R$)</label><input id="sinal" type="number" oninput="atualizar()">
+<div class="total" id="valorReceber">Valor a Receber: R$ 0,00</div>
 </section>
 
 <section>
-<h2>Itens do Kit (Valores para avaria/extravio)</h2>
+<h2>📦 Itens do Kit (valores apenas para avaria/extravio)</h2>
 <label>Item</label><input id="item">
 <label>Valor de Reposição (R$)</label><input id="valorItem" type="number">
-<button onclick="addItem()">Adicionar</button>
-
-<table id="tabela">
-<tr><th>Item</th><th>Valor Reposição</th></tr>
-</table>
+<button onclick="addItem()">Adicionar Item</button>
+<table id="tItens"><tr><th>Item</th><th>Valor Reposição</th></tr></table>
 </section>
 
 <section>
-<button onclick="gerarContrato()">Atualizar Contrato</button>
-<button onclick="gerarPDF()">Gerar PDF</button>
+<button onclick="gerarContrato()">🔄 Atualizar Contrato</button>
+<button onclick="gerarPDF()">📄 Gerar PDF</button>
 </section>
 
 <section id="contratoPDF">
-
-<div class="watermark">
-  <img src="logo.png">
-</div>
-
-<div class="contratoConteudo" id="contratoTexto">
-<h1 style="text-align:center;color:#c64f86">CONTRATO DE LOCAÇÃO – PEGUE E MONTE</h1>
-<p style="text-align:center;font-weight:bold">
-*** CONTRATO VISÍVEL NA TELA ***
-</p>
-</div>
-
+<div class="watermark"><img src="logo.png"></div>
+<div class="contrato" id="contratoConteudo"></div>
 </section>
 
 <script>
-let itens = [];
+let itens=[];
 
 function addItem(){
-  let i = item.value;
-  let v = valorItem.value;
-  itens.push({i,v});
-  tabela.innerHTML += `<tr><td>${i}</td><td>R$ ${Number(v).toFixed(2)}</td></tr>`;
-  item.value=""; valorItem.value="";
+ let i=item.value;
+ let v=Number(valorItem.value||0);
+ if(!i||v<=0)return alert('Preencha item e valor');
+ itens.push({i,v});
+ tItens.innerHTML+=`<tr><td>${i}</td><td>R$ ${v.toFixed(2)}</td></tr>`;
+ item.value='';valorItem.value='';
+ gerarContrato();
 }
 
+function atualizar(){gerarContrato();}
+
 function gerarContrato(){
-  let vc = Number(valorContrato.value||0);
-  let s = Number(sinal.value||0);
-  let receber = vc - s;
+ let vc=Number(valorContrato.value||0);
+ let s=Number(sinal.value||0);
+ let receber=vc-s;
+ valorReceber.innerText=`Valor a Receber: R$ ${receber.toFixed(2)}`;
 
-  valorReceber.innerText = `Valor a Receber: R$ ${receber.toFixed(2)}`;
+ let lista=itens.length?itens.map(x=>`• ${x.i} – Valor reposição: R$ ${x.v.toFixed(2)}`).join('<br>'):'—';
 
-  let lista = itens.map(x=>`${x.i} – Valor reposição: R$ ${Number(x.v).toFixed(2)}`).join("<br>");
+ contratoConteudo.innerHTML=`
+ <h1 style="text-align:center;color:#c64f86">CONTRATO DE LOCAÇÃO – PEGUE E MONTE</h1>
 
-  contratoTexto.innerHTML = `
-  <h1 style="text-align:center;color:#c64f86">CONTRATO DE LOCAÇÃO – PEGUE E MONTE</h1>
+ <strong>LOCADORA:</strong><br>
+ Molleiros Decor – Decoração Infantil<br>
+ CNPJ/CPF: 290.285.608-31<br>
+ WhatsApp: (11) 97291-8935<br>
+ Endereço: Rua Odilon Henrique de Macedo, 67<br><br>
 
-  <strong>LOCADORA:</strong><br>
-  Molleiros Decor – Decoração Infantil<br><br>
+ <strong>LOCATÁRIO:</strong><br>
+ ${cNome.value||''}<br>
+ CPF: ${cCpf.value||''}<br>
+ Telefone: ${cTel.value||''}<br>
+ Endereço: ${cEnd.value||''}<br><br>
 
-  <strong>LOCATÁRIO:</strong><br>
-  ${cNome.value}<br>
-  CPF: ${cCpf.value}<br>
-  Telefone: ${cTel.value}<br>
-  Endereço: ${cEnd.value}<br><br>
+ <strong>VALOR DO CONTRATO:</strong>
+ <div class="valorDestaque">R$ ${vc.toFixed(2)}</div>
 
-  <strong>VALOR DO CONTRATO:</strong>
-  <div class="valorDestaque">R$ ${vc.toFixed(2)}</div>
+ <strong>SINAL PAGO:</strong> R$ ${s.toFixed(2)}<br>
+ <strong>VALOR A RECEBER:</strong> R$ ${receber.toFixed(2)}<br><br>
 
-  <strong>SINAL PAGO:</strong> R$ ${s.toFixed(2)}<br>
-  <strong>VALOR A RECEBER:</strong> R$ ${receber.toFixed(2)}<br><br>
+ <strong>ITENS LOCADOS (VALORES PARA AVARIA / EXTRAVIO):</strong><br>
+ ${lista}<br><br>
 
-  <strong>ITENS LOCADOS (Valores para avaria/extravio):</strong><br>
-  ${lista}<br><br>
+ <strong>CLÁUSULAS CONTRATUAIS:</strong><br>
+ 1. O presente contrato rege a locação de materiais no sistema <strong>Pegue e Monte</strong>.<br>
+ 2. O LOCATÁRIO declara receber os itens em perfeito estado.<br>
+ 3. Em caso de avaria ou extravio, será cobrado o valor integral de reposição.<br>
+ 4. Atraso na devolução gera multa de 25% do valor da locação por dia.<br>
+ 5. Contrato com validade jurídica conforme MP 2.200-2/2001.<br><br>
 
-  <strong>CLÁUSULAS:</strong><br>
-  O LOCATÁRIO se responsabiliza pela guarda, conservação e devolução dos itens
-  nas mesmas condições recebidas, ficando sujeito à cobrança integral dos valores
-  de reposição em caso de avaria ou extravio.<br><br>
-
-  Documento assinado eletronicamente.<br>
-  Foro: Carapicuíba – SP
-  `;
+ <strong>Foro:</strong> Carapicuíba / SP
+ `;
 }
 
 function gerarPDF(){
-  gerarContrato();
-  html2pdf().from(document.getElementById("contratoPDF")).save("Contrato_Molleiros_Decor.pdf");
+ gerarContrato();
+ html2pdf().from(document.getElementById('contratoPDF')).set({
+  margin:10,
+  filename:'Contrato_Molleiros_Decor.pdf',
+  html2canvas:{scale:2,useCORS:true},
+  jsPDF:{format:'a4',orientation:'portrait'}
+ }).save();
 }
-</script>
 
+gerarContrato();
+</script>
 </body>
 </html>
